# AI_Agent

./: APDescription.txt  ENIAD_AI_Agent  ENIAD_AI_Agent.pub  MTPs-Main-Container.txt  MainContainer.java  MyAgent.java  README.md  SimpleContainer.java  SmartAgent.java  py.ipynb  struc.py
RAG_Gemini/: RAG_Gemini.py  requirements.txt
ai_devs3/: pyproject.toml
ai_devs3/src/ai_devs3/: crew.py  main.py
ai_devs3/src/ai_devs3/config/: agents.yaml  tasks.yaml
ennajari/: README.md  pyproject.toml  report.md
ennajari/src/ennajari/: app.py  config.yaml  crew.py  main.py  report.md
ennajari/src/ennajari/config/: agents.yaml  tasks.yaml
src/: SmartAgent.java
