[project]
name = "ai_devs3"
version = "0.1.0"
description = "ai_devs3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
ai_devs3 = "ai_devs3.main:run"
run_crew = "ai_devs3.main:run"
train = "ai_devs3.main:train"
replay = "ai_devs3.main:replay"
test = "ai_devs3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
